<resources>
  <string name="app_name">Mitra Tani Sejahtera</string>
  <string name="add_user">Tambahkan pengguna</string>
  <string name="address">Alamat</string>
  <string name="after_uploading_the_image_wait_for_the_admin_to_confirm_the_data_you_sent">Setelah mengunggah gambar, tunggu admin untuk mengonfirmasi data yang Anda kirim</string>
  <string name="alert_massage">Data yang diinputkan harus sesuai KTP</string>
  <string name="balance">Saldo</string>
  <string name="bank">BANK</string>
  <string name="code_425">Data Rusak saat kirim / Sesi Anda berakhir</string>
  <string name="code_500">Respons tidak ditemukan / Sesi Anda berakhir</string>
  <string name="date_of_retrieval">Tanggal Pengambilan</string>
  <string name="description_address">RT / RW. Informasi Alamat Rumah</string>
  <string name="district">Kota kabupaten</string>
  <string name="edit_profile">Sunting profil</string>
  <string name="image_ktp">Gambar KTP</string>
  <string name="name">Nama</string>
  <string name="number_address">Nomor rumah</string>
  <string name="number_ktp">Nomor KTP</string>
  <string name="owner">Pemilik</string>
  <string name="phone_number">Nomor telepon</string>
  <string name="photo_holding_ktp_id">foto memegang KTP</string>
  <string name="profile">Profil</string>
  <string name="province">Propinsi</string>
  <string name="receipt_date">Tanggal penerimaan</string>
  <string name="order">Buat Pesanan</string>
  <string name="sher_on_what_app">Masukkan nama pengguna dan foto bukti transfer Anda di sini</string>
  <string name="transferred_to">Ditransfer ke</string>
  <string name="upload_ktp">Unggah KTP</string>
  <string name="upload_proof_of_transfer">Bagikan Bukti Transfer</string>
  <string name="validation_password">konfirmasi sandi</string>
  <string name="password">kata sandi</string>
  <string name="village">Desa</string>
  <string name="withdraw">Menarik Tunai</string>
  <string name="withdraw_limit">Penarikan Anda masih ditangani oleh Admin</string>
  <string name="default_balance">Rp 0</string>
  <string name="icon">Icon</string>
  <string name="home">Home</string>
  <string name="email">Email</string>
  <string name="ktp">KTP</string>
  <string name="login">Login</string>
  <string name="logo">Logo</string>
  <string name="pin_bank">PIN Bank</string>
  <string name="qr">QR</string>
  <string name="rp">Rp</string>
  <string name="sub_district">Kelurahan</string>
  <string name="submit">Submit</string>
  <string name="total_stup">Total Pohon</string>
  <string name="username">username</string>
  <string name="binary">Gruop</string>
  <string name="status">status</string>
  <string name="gallery">Gallery</string>
  <string name="blank_password">Kosongkan jika tidak ingin dirubah</string>
  <string name="open_google_map">Buka Lokasi Di Google map</string>
  <string name="kata_sandi_lama">Kata Sandi Lama</string>
  <string name="kata_sandi_baru">Kata Sandi Baru</string>
  <string name="konfrimasi_kata_sandi_baru">Konfrimasi Kata Sandi Baru</string>
  <string name="location">Lokasi</string>
  <string name="total_kapling">Total Porang</string>
  <string name="total_pin">Total Pin</string>
  <string name="bergabung_menjadi_agent_dengan_biyaya_rp_300_000_akan_di_tambahkan_ke_tagihan_anda">Bergabung Menjadi Agent Dengan biyaya : Rp.300.000. akan di tambahkan ke tagihan anda</string>
  <string name="hasil_panen">Hasil Panen</string>
  <string name="kirim_bukti_transfer">Kirim Bukti Transfer</string>
  <string name="ambil_gambar_dengan_menekan_logo">Ambil Gambar dengan menekan logo</string>
  <string name="share">Share</string>
  <string name="porang">Porang</string>
  <string name="talas">Talas</string>
  <string name="lupa_kata_sandi">Lupa Kata Sandi ?</string>
  <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
  <string name="kirim_email">Kirim Email</string>
</resources>
