<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditProfileActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageView"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorAccent"
        android:src="@mipmap/ic_launcher_foreground"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/Default"
        tools:ignore="Autofill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName|textPostalAddress"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/Default"
        tools:ignore="Autofill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:text="@string/blank_password"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/kata_sandi_lama"
        android:inputType="textPassword"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/Default"
        tools:ignore="Autofill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/kata_sandi_baru"
        android:inputType="textPassword"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/Default"
        tools:ignore="Autofill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/c_NewPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/konfrimasi_kata_sandi_baru"
        android:inputType="textPassword"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/Default"
        tools:ignore="Autofill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_success"
        android:text="@string/submit"
        android:textColor="@color/textSecondary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

  </LinearLayout>

</ScrollView>