<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OrderActivity">

  <LinearLayout
      android:gravity="center"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bankToTransferLinearLayout"
        android:background="@drawable/card_secondary"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/transferred_to"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:textAlignment="center"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"/>

      <TextView
          android:text="@string/name"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"/>

      <TextView
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"
          android:id="@+id/nameTextView"/>

      <TextView
          android:text="@string/bank"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"/>

      <TextView
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"
          android:id="@+id/bankTextView"/>

      <TextView
          android:text="@string/pin_bank"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"/>

      <TextView
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"
          android:id="@+id/pinBankTextView"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <Button
          android:id="@+id/buttonPorang"
          android:layout_margin="5dp"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/button_info"
          android:textColor="@color/textSecondary"
          android:text="@string/porang"/>

      <Button
          android:id="@+id/buttonTales"
          android:layout_margin="5dp"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/button_primary"
          android:textColor="@color/textSecondary"
          android:text="@string/talas"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/idTypeTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:gravity="center"
          android:text="@string/total_kapling"
          android:textColor="@color/textPrimary"
          android:textSize="20sp"/>

      <EditText
          android:layout_weight="1"
          android:hint="@string/default_balance"
          android:textColor="@color/textPrimary"
          android:textColorHint="@color/colorSecondary"
          android:backgroundTint="@color/Default"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:ems="10"
          android:id="@+id/totalEditText"
          tools:ignore="Autofill"/>

    </LinearLayout>

    <CheckBox
        android:layout_margin="5dp"
        android:text="@string/bergabung_menjadi_agent_dengan_biyaya_rp_300_000_akan_di_tambahkan_ke_tagihan_anda"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/agentCheckBox"/>

    <Button
        android:layout_margin="30dp"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textSecondary"
        android:background="@drawable/button_success"
        android:id="@+id/submitButton"/>

    <LinearLayout
        android:id="@+id/contentDataLinearLayout"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

  </LinearLayout>

</ScrollView>