<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:id="@+id/imageView"
        android:scaleType="fitCenter"
        android:background="@color/Default"
        android:contentDescription="@string/logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textPrimary"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/username"
        tools:ignore="Autofill"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textPrimary"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/password"
        tools:ignore="Autofill"/>

    <Button
        android:text="@string/login"
        android:background="@drawable/button_default"
        android:textColor="@color/textPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/login"/>

  </LinearLayout>

</ScrollView>