<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ImageActivity">

  <LinearLayout
      android:orientation="vertical"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:text="@string/after_uploading_the_image_wait_for_the_admin_to_confirm_the_data_you_sent"
        android:layout_margin="20dp"
        android:textSize="14sp"
        android:textColor="@color/textPrimary"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/photo_holding_ktp_id"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@mipmap/ic_ktp_user"
        android:background="@drawable/card_secondary"
        android:id="@+id/userAndKtpImageView"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorAccent"
        />

    <TextView
        android:text="@string/image_ktp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/card_secondary"
        android:id="@+id/ktpImageView"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo"
        app:srcCompat="@mipmap/ic_ktp"/>

  </LinearLayout>

</ScrollView>